--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
     ports:
-      - 3306:3306
+      - 3366:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=M1ndfulness!
+      - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=test
       - MySQL_USER=test
       - MYSQL_PASSWORD=test
